syntax = "proto2";
option java_package = "io.hbar.protobuf.schema";
option java_outer_classname = "HilbertDominantCyclePeriodSeriesSchema";

message HilbertDominantCyclePeriodSeries {

	message HilbertDominantCyclePeriod {

		required int32 timestamp = 1;
		required double value = 2;

	}

	repeated HilbertDominantCyclePeriod series = 1;

}