syntax = "proto2";
option java_package = "io.hbar.protobuf.schema";
option java_outer_classname = "HilbertTrendModeSeriesSchema";

message HilbertTrendModeSeries {

	message HilbertTrendMode {

		required int32 timestamp = 1;
		required double value = 2;

	}

	repeated HilbertTrendMode series = 1;

}