syntax = "proto2";
option java_package = "io.hbar.protobuf.schema";
option java_outer_classname = "HilbertDominantCyclePhaseSeriesSchema";

message HilbertDominantCyclePhaseSeries {

	message HilbertDominantCyclePhase {

		required int32 timestamp = 1;
		required double value = 2;

	}

	repeated HilbertDominantCyclePhase series = 1;

}