syntax = "proto2";
option java_package = "io.hbar.protobuf.schema";
option java_outer_classname = "HilbertTrendlineSeriesSchema";

message HilbertTrendlineSeries {

	message HilbertTrendline {

		required int32 timestamp = 1;
		required double value = 2;

	}

	repeated HilbertTrendline series = 1;

}