syntax = "proto2";
option java_package = "io.hbar.protobuf.schema";
option java_outer_classname = "StrategyStatsSeriesSchema";

message StrategyStatsSeries {

	message StrategyStats {

		required int32 timestamp = 1;
		required double price = 2;
		required double volume = 3;

	}

	repeated StrategyStats series = 1;

}